[project]
name = "joule"
version = "0.1.0"
description = "A toy Jsonnet language server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygls>=2.0.0",
    "rich>=14.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
    "typer>=0.20.1",
]

[project.scripts]
joule = "joule:app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
